--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_database: ^10.0.9
   assets_audio_player: ^3.0.6
+  alarm: ^0.0.5
 
 dev_dependencies:
   flutter_test:
