--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   assets_audio_player: ^3.0.6
   cloud_firestore: ^4.3.1
   firebase_auth: ^4.2.5
-  alarm: ^0.0.5
+  #alarm: ^0.0.5
 
 dev_dependencies:
   flutter_test:
